--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 		<h1>Is it a Haiku?</h1>
 		<h3>Enter your haiku below to find out</h3>
 		<form>
-			<input class="line1" type="text" placeholder="Enter your first line here">
-			<input class="line2" type="text" placeholder="Enter your second line here">
-			<input class="line3" type="text" placeholder="Enter your third line here">
+			<input class="line1" type="text" placeholder="Enter your first line here"><span id="line1Syllables"></span>
+			<input class="line2" type="text" placeholder="Enter your second line here"><span id="line2Syllables"></span>
+			<input class="line3" type="text" placeholder="Enter your third line here"><span id="line3Syllables"></span>
 		</form>
 		<button>
 			Is it a haiku?
