--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 		<button>
 			Is it a haiku?
 		</button>
+		<!-- <h6>What do the numbers mean?</h6> -->
 		<script type="text/javascript" src="js/main.js"></script>
 	</body>
 </html>
