--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     	<meta name="description" content="Your description goes here">
     	<meta name="keywords" content="one, two, three">
 
-		<title>Blank Template</title>
+		<title>Is it a Haiku?</title>
 
 		<!-- external CSS link -->
 		<link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/style.css">
 	</head>
+
 	<body>
 		<h1>Is it a Haiku?</h1>
 		<h3>Enter your haiku below to find out</h3>
