--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			Is it a haiku?
 		</button>
 		<!-- <h6>What do the numbers mean?</h6> -->
-		<h2></h2>
+		<h2 class="haikuResult"></h2>
 		<script type="text/javascript" src="js/main.js"></script>
 	</body>
 </html>
