--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 	<head>
     	<meta charset="utf-8">
-    	<meta name="description" content="Your description goes here">
-    	<meta name="keywords" content="one, two, three">
+    	<meta name="description" content="Tired of counting syllables? Use this tool to check if it's a haiku.">
+    	<meta name="keywords" content="haiku, validator, syllable, checker, poetry">
 
 		<title>Is it a Haiku?</title>
 
